# RavEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README-android.md  README.md  build-linux.sh  gen_license.py  init-linux.sh  init-mac.sh  init-win.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
RavEngine_Test/: Info.plist  PlayerActor.hpp  SkateSystem.h  TestApp.h  TestEntity.cpp  TestEntity.hpp  WorldTest.cpp  WorldTest.hpp  main.cpp  main.mm
RavEngine_Test/Base.lproj/: MainMenu.xib
cmake/: importers.cmake  importlib.cmake  pack_resources.cmake  rtti.cmake  rvemc.cmake  rvesc.cmake  rveskc.cmake  shaders.cmake
fonts/: OpenFontLicense.txt
include/RavEngine/: AccessType.hpp  AddRemoveAction.hpp  Animation.hpp  AnimationAsset.hpp  AnimatorComponent.hpp  AnimatorSystem.hpp  App.hpp  AppEnd.h  AppleUtilities.h  Arch.hpp  Array.hpp  Atomic.hpp  AudioEngine.hpp  AudioExporter.hpp  AudioGraph.hpp  AudioGraphAsset.hpp  AudioMIDI.hpp  AudioMeshAsset.hpp  AudioMeshComponent.hpp  AudioPlayer.hpp  AudioRenderBuffer.hpp  AudioRingbuffer.hpp  AudioRoom.hpp  AudioRoomMaterial.hpp  AudioRoomSyncSystem.hpp  AudioSnapshot.hpp  AudioSource.hpp  AudioSpace.hpp  AudioSyncSystem.hpp  AudioTypes.hpp  BufferPool.hpp  BufferedVRAMVector.hpp  Buffers.hpp  BuiltinMaterials.hpp  BuiltinPostProcess.hpp  BuiltinTonemap.hpp  CTTI.hpp  CallableTraits.hpp  CameraComponent.hpp  CaseAnalysis.hpp  (+128 more)
include/RavEngine/Gauss/: AffineMatrix.h  AffineMatrix3.h  AffineMatrix4.h  Algebra.h  Assert.h  Compare.h  Config.h  Conversions.h  Decl.h  Details.h  Determinant.h  Epsilon.h  Equals.h  Flip.h  GLSLTypes.h  Gauss.h  HLSLTypes.h  Inverse.h  Macros.h  Matrix.h  MatrixInitializer.h  OStream.h  ProjectionMatrix4.h  Quaternion.h  Real.h  Rotate.h  RotateVector.h  ScalarType.h  Scale.h  Spherical.h  StdMath.h  Swizzle.h  SwizzleVec2Op2.h  SwizzleVec2Op3.h  SwizzleVec2Op4.h  SwizzleVec3Op2.h  SwizzleVec3Op3.h  SwizzleVec3Op4.h  SwizzleVec4Op2.h  SwizzleVec4Op3.h  (+9 more)
include/RavEngine/pathfinder/: AStar.cpp  AStar.h  Dijkstra.cpp  Dijkstra.h  Node.cpp  Node.h  PathAlgorithm.h  PathFinder.h
materials/: default_billboard_particle.fsh  default_billboard_particle.vsh  default_billboard_particle_fsh.json  default_billboard_particle_unlit.fsh  default_billboard_particle_unlit_fsh.json  default_billboard_particle_vsh.json  defaultsky.fsh  defaultsky.vsh  defaultsky_fsh.json  defaultsky_vsh.json  pbr.fsh  pbr.vsh  pbr_baked_fsh.json  pbr_baked_transparent_fsh.json  pbr_baked_vsh.json  pbr_fs.json  pbr_particle.fsh  pbr_particle.vsh  pbr_particle_fsh.json  pbr_particle_shared.glsl  pbr_particle_transparent_fsh.json  pbr_particle_vsh.json  pbr_shared.glsl  pbr_transparent_fsh.json  pbr_vsh.json
meshes/: cone.json  cube.json  cylinder.json  lightcone.json  quad.json  skydome.json  sphere.json
shader-transpiler/: CMakeLists.txt
shaders/: BRDF.glsl  ambient_ssgi.fsh  ambientlight.fsh  ambientlight.vsh  ambientlight_varying.def.hlsl  ao_upsample.fsh  blank_blockingbuffer_cs.glsl  blit_varying.def.hlsl  bloom.fsh  bloom_downsample.fsh  bloom_merge.fsh  bloom_upsample.fsh  blur_kernel.csh  blur_kernel.glsl  blur_kernel_x.csh  blur_kernel_y.csh  cluster_assign_lights.csh  cluster_build_grid.csh  cluster_defs.h  cluster_shared.glsl  compile.cmake  create_particle.csh  cubes.json  debug.fsh  debug.json  debug.vsh  debugNav.fsh  debugNav.vsh  debugNav_varying.def.hlsl  debug_varying.def.sc  defaultMaterial.frag  defaultMaterial.json  defaultMaterial.vert  default_billboard_particle.fsh  default_billboard_particle.vsh  default_varying.def.hlsl  default_varying.def.sc  defaultcull.csh  defaultsky.fsh  defaultsky.vsh  (+78 more)
src/: AnimationAsset.cpp  AnimatorComponent.cpp  App.cpp  App.mm  App_priv.hpp  AppleUtilities.mm  AudioEngine.cpp  AudioExporter.cpp  AudioGraph.cpp  AudioGraphAsset.cpp  AudioMIDI.cpp  AudioMeshAsset.cpp  AudioMeshComponent.cpp  AudioPlayer.cpp  AudioRenderBuffer.cpp  AudioRingbuffer.cpp  AudioRoom.cpp  AudioRoomSyncSystem.cpp  AudioSource.cpp  AudioSpace.cpp  AudioSpaceBoxReverbation.cpp  AudioSyncSystem.cpp  BufferPool.cpp  BufferedVRAMVector.cpp  BuiltinMaterials.cpp  BuiltinPostProcess.cpp  BuiltinTonemap.cpp  CameraComponent.cpp  Component.cpp  Constraint.cpp  Debug.cpp  DebugDraw.cpp  DebugDrawer.cpp  DepthPyramid.cpp  Dialogs.cpp  Entity.cpp  GUI.cpp  GameplayStatics.cpp  IInputAction.cpp  IInputListener.cpp  (+66 more)
src/shaderc_auto/: main.cpp
test/: basics.cpp  dsperf.cpp  dummyapp.cpp  test-linux.sh  test-mac.sh  test-win.bat
tools/importlib/: ImportLib.cpp
tools/importlib/RavEngine/: ImportLib.hpp
tools/rveac/: rveac.cpp
tools/rvemc/: rve_mesh.hpp  rvemc.cpp
tools/rvesc/: LICENSE-mlab.txt  enginedata.glsl  lit_mesh.fsh  lit_mesh.vsh  lit_mesh_bindings.glsl  lit_particle_quad.fsh  make_engine_data.glsl  mesh_shared.glsl  mesh_varyings.glsl  particle_bindings_preamble.glsl  particle_bindings_sub.glsl  particle_init.csh  particle_mesh.vsh  particle_mesh_selection.csh  particle_quad.vsh  particle_update.csh  rvesc.cpp  skybox.fsh  skybox.vsh  unlit_mesh.fsh  unlit_mesh.vsh  utility.glsl
tools/rvesc/include/RavEngine/: billboard.glsl  meshparticle.glsl  quat.glsl
tools/rveskc/: rveskc.cpp
ui/: default.rcss
